poke/testsuite/poke.pkl/sr-diag-2.pk
/* { dg-do compile } */

defvar a = [1,2,3] .>> 2; /* { dg-error "expected integral or offset" } */
